--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
             preLogger: true
             postLogger: false
       routes:
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/**
         - id: first-service
 #          uri: http://localhost:8081/
           uri: lb://MY-FIRST-SERIVCE
